--- a/voucher.html
+++ b/voucher.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>DZUHUR, JANGAN LUPA SOLAT ABIS ITU MAKAN</h2>
+        <h2>ISYA CO, JANGAN LUPA SOLAT ABIS ITU MAKAN</h2>
         <form id="dana-form">
             <label for="nama">Nama Kamu : </label>
             <input type="text" id="nama" name="nama" required>
