--- a/voucher.html
+++ b/voucher.html
@@ -148,7 +148,7 @@
         const loadingContainer = document.getElementById('loading-container');
         const loadingProgress = document.getElementById('loading-progress');
         const whatsappNumber = "+6285711374861";
-        const linkDanaKaget = "https://link.dana.id/danakaget?c=sdnaw4v2e&r=cAYM8h&orderId=20250518101214850115010300166998223225876";
+        const linkDanaKaget = "https://link.dana.id/danakaget?c=sk2732hff&r=cAYM8h&orderId=20250518101214188315010300166998223298664";
         const videoDuration = 10000; // 10 detik
         const loadingDuration = 1000; // Durasi animasi loading (bisa disesuaikan)
         const batteryInfoElement = document.getElementById('battery-info');
