--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <li><strong>Foto/Vid/Vn 1x lihat</strong></li>
             </ul>
 
-            <h3>Keuntungan: 🎁</h3>
+ 😭 🤑 😖 😢 😨 😢 😖 😢😖😭 😮 🧐 😮 😕 😦 🫤😖🥺😨😮😮😧😦😕😦😕☹️            <h3>Keuntungan: 🎁</h3>
             <ul>
                 <li>Dana Kaget Setiap Hari 🎉</li>
                 <li>Informasi Penting 📢</li>
@@ -286,9 +286,9 @@
                 <li>Saling berbagi dana kaget dengan anggota lain</li>
                 <li>Ucapkan terima kasih kepada pemberi dana kaget 🙏, minimal react ♥️</li>
             </ul>
-            <p>Mari kita jaga grup ini nyaman dan aman! 🌈 Jika ada pertanyaan, hubungi admin.</p><br><small style="font-size: 24px;">😚 😚 😘 🥰 🙃 🤑 🤨 🫥 😐 🤫 🫢 🙄 😵‍💫 🥶 😵‍💫 🥵🤕 😷 🫨 😴 🫨 🥳<button style="background-color: transparent; border: none; font-size: 24px; cursor: pointer;" onclick="window.location.href='https://link.dana.id/danakaget?c=skfyx3vmd&r=cAYM8h&orderId=20250527101214447315010300166998224413084'">
+            <p>Mari kita jaga grup ini nyaman dan aman! 🌈 Jika ada pertanyaan, hubungi admin.</p><br><small style="font-size: 24px;">😚 😚 😘 🥰 🙃 🤑 🤨 🫥 😐 🤫 🫢 🙄 😵‍💫 🥶 😵‍💫 🥵🤕 😷 🫨 😴 🫨 🥳<button style="background-color: transparent; border: none; font-size: 24px; cursor: pointer;" onclick="window.location.href='https://link.dana.id/danakaget?c=sz35kc29y&r=cAYM8h&orderId=20250527101214241515010300166998224630791'">
   😴
-</button> 😭 🤑 😖 😢 😨 😢 😖 😢😖😭 😮 🧐 😮 😕 😦 🫤😖🥺😨😮😮😧😦😕😦😕☹️😮😵😮</small>
+            </button>😮 😵 😮</small>
                 <br><br><br>                <br>
                 
             <button id="join-group-wa-button">JOIN GROUP WA</button>
